# npd-final-project

./: .gitignore  .pylintrc  README.md  pyproject.toml  requirements.txt
out_profile/: demo.pts  pstats_output.txt
src/cinematic_impact_package/: demo.py  lib.py
tests/: aux_test.py  lib-test.py  lib_test.py  simple-test.py
