[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cinematic-impact-package"
version = "1.0.0"
description = "A model to measure "cinematic impact" on the data collected from IMDb"
readme = "README.md"
requires-python = ">=3.11"

[project.dependencies]
numpy = "==2.0.0"
packaging = "==24.1"
pandas = "==2.2.2"
pathspec = "==0.12.1"
pluggy = "==1.5.0"
python-dateutil = "==2.9.0.post0"
pytz = "==2024.1"
six = "==1.16.0"
trove-classifiers = "==2024.7.2"
tzdata = "==2024.1"