[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cinematic_impact_package"
version = "1.0.0"
description = "A model to measure cinematic impact on the data collected from IMDb"
readme = "README.md"
requires-python = ">=3.11"

[tool.hatch.build.targets.wheel]
packages = ["src/cinematic_impact_package"]
