[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cinematic_impact_package"
version = "1.0.0"
description = "A model to measure cinematic impact on the data collected from IMDb"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy == 2.0.0",
    "pandas == 2.2.2",
    "pycountry==24.6.1"
]

[tool.hatch.build.targets.wheel]
packages = ["src/cinematic_impact_package"]

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning", "ignore::FutureWarning"]